# MegaGTA

./: .gitignore  .gitmodules  Makefile  README.md  a_star_node.h  a_star_node_tester.cpp  asm_core.cpp  bit_operation.h  build_graph.cpp  city.cpp  city.h  codon.cpp  codon.h  cx1_read2sdbg_s1.cpp  cx1_read2sdbg_s2.cpp  definitions.h  err.txt  false_positive_checker.cpp  fast  fast_kmer_filter.cpp  gene_starts.txt  graph_example.cpp  hash_map.h  hash_map_single_thread.h  hash_set.h  hash_set_single_thread.h  hash_set_st.h  hash_table.h  hash_table_single_thread.h  hash_test  hmm_graph_search.cpp  hmm_graph_search.h  hmm_graph_search_tester.cpp  hmmer3b_parser.h  kingassembler.py  kmer.h  kmer_1.h  kmer_generator  kmer_generator.cpp  kmer_generator_tester.cpp  (+38 more)
src/: CMakeLists.txt  Makefile  a_star_node.h  assembler.cpp  assembly_algorithms.cpp  assembly_algorithms.h  branch_group.cpp  branch_group.h  build_graph.cpp  build_read_lib.cpp  city.cpp  city.h  codon.cpp  codon.h  codon_tester.cpp  cx1_read2sdbg_s1.cpp  cx1_read2sdbg_s2.cpp  definitions.h  edge_io.h  false_positive_checker.cpp  false_positive_position.cpp  fast_kmer_filter.cpp  fast_kmer_filter.h  filter_by_len.cpp  functional.h  graph_example.cpp  hash.h  hash_map_st.h  hash_set_st.h  hash_table.h  hash_table_st.h  histgram.h  hmm_graph_search.cpp  hmm_graph_search.h  hmmer3b_parser.h  kingassembler.py  kmer.h  kmer_generator.cpp  kseq.h  make_fast.sh  (+33 more)
src/evolution/: NucleotideSubstitutionModel.C
src/sequence/: 1.fa  AASequence.C  AASequence.h  AminoAcid.h  CMakeLists.txt  CodingSequence.h  Codon.h  make.sh  (+8 more)
(+19 files in other folders)
